[tool.poetry]
name = "nicegui_tools"
version = "2023.08.05"
description = "Mostly generic NiceGUI tools for multi-utility apps"
authors = ["darrida <darrida.py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
nicegui = "^1.3.7"
loguru = "^0.7.0"
diskcache = "^5.6.1"
pandas = "^2.0.3"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
extend-exclude = [".venv"]
extend-select = ["S", "I", "C4"]  # bandit (S), isort (I), comprehensions (C4), type-checking (TCH)

[tool.ruff.isort]
extra-standard-library = []
known-first-party = ["src", "nicegui_tools"]
known-third-party = []
known-local-folder = []
# relative-imports-order = "closest-to-furthest"
# required-imports = ["from __future__ import annotations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
